--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-import": "^2.22.0"
   },
   "dependencies": {
+    "bent": "^7.3.10",
     "config": "^3.3.1",
     "fastify": "^3.4.1",
     "fastify-helmet": "^5.0.2",
