--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "bent": "^7.3.10",
     "config": "^3.3.1",
     "fastify": "^3.4.1",
+    "fastify-auth": "^1.0.1",
     "fastify-helmet": "^5.0.2",
     "fastify-swagger": "^3.3.0",
-    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.5",
     "winston": "^3.3.3"
   }
