--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "fastify-auth": "^1.0.1",
     "fastify-helmet": "^5.0.2",
     "fastify-swagger": "^3.3.0",
+    "moment": "^2.29.0",
     "mongoose": "^5.10.5",
     "winston": "^3.3.3"
   }
