--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "config": "^3.3.1",
     "fastify": "^3.4.1",
     "fastify-auth": "^1.0.1",
+    "fastify-cors": "^4.1.0",
     "fastify-helmet": "^5.0.2",
     "fastify-swagger": "^3.3.0",
     "moment": "^2.29.0",
